--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img class="header__logo" src="icons/icon-logo.svg" alt="Логотип воздушный шар">
+            <img class="header__logo" src="icons/icon-ballons.svg" alt="Логотип воздушный шар">
             <div class="header__box">
                 <h1 class="title-first">
                     <span class="title-first__main">туры на воздушном шаре</span>
