--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="#" class="btn btn_animated">наш каталог</a>
             </div>
         </header>
+        <div class="test"></div>
     </div>
 </body>
 </html>
